Downgrade to bullseye
Try fix java installation issues/no candidate in bookworm for 11